...
                android:id="@+id/send_random_event_button"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/send_random_event"
                app:layout_constraintBottom_toTopOf="@id/custom_event_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_button"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="@dimen/material_button_max_width" />

...
